kubernetes/apps/media/radarr/ingress/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: radarr-ingress
  annotations:
    kubernetes.io/ingress.class: traefik-internal
    external-dns.alpha.kubernetes.io/target: default.internal.javiersant.com
    gethomepage.dev/enabled: "true"
    gethomepage.dev/href: "https://radarr.default.internal.javiersant.com"
    gethomepage.dev/description: Movie manager for usenet and torrent users.
    gethomepage.dev/group: Media
    gethomepage.dev/icon: radarr.svg
    gethomepage.dev/name: Radarr
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`radarr.default.internal.javiersant.com`)
      kind: Rule
      services:
        - kind: Service
          name: radarr
          port: 9696
  tls:
    secretName: wildcard-javiersant-com-tls
